Fixed split view active area indicator alignment.
This covers the case when half-axis-handle-size > 1px.

--- a/modules/gui/src/widget/split/splitView.module.css
+++ b/modules/gui/src/widget/split/splitView.module.css
@@ -162,43 +162,43 @@
 }
 
 .area.partial.top:not(.left):not(.right):hover::after {
-    bottom: calc(-1 * var(--half-area-marker-size) - var(--half-axis-handle-size) + var(--area-marker-distance) * 1.4142 + var(--attribution-mask-size));
+    bottom: calc(-1 * var(--half-area-marker-size) - 1px + var(--area-marker-distance) * 1.4142 + var(--attribution-mask-size));
     left: calc(var(--left) - var(--half-area-marker-size) + var(--attribution-mask-size));
 }
 
 .area.partial.bottom:not(.left):not(.right):hover::after {
-    top: calc(-1 * var(--half-area-marker-size) + var(--half-axis-handle-size) + var(--area-marker-distance) * 1.4142 - 1px + var(--attribution-mask-size));
+    top: calc(-1 * var(--half-area-marker-size) + var(--area-marker-distance) * 1.4142 + var(--attribution-mask-size));
     left: calc(var(--left) - var(--half-area-marker-size) + var(--attribution-mask-size));
 }
 
 .area.partial.left:not(.top):not(.bottom):hover::after {
     top: calc(var(--top) - var(--half-area-marker-size) + var(--attribution-mask-size));
-    right: calc(-1 * var(--half-area-marker-size) - var(--half-axis-handle-size) + var(--area-marker-distance) * 1.4142 + var(--attribution-mask-size));
+    right: calc(-1 * var(--half-area-marker-size) - 1px + var(--area-marker-distance) * 1.4142 + var(--attribution-mask-size));
 }
 
 .area.partial.right:not(.top):not(.bottom):hover::after {
     top: calc(var(--top) - var(--half-area-marker-size) + var(--attribution-mask-size));
-    left: calc(-1 * var(--half-area-marker-size) + var(--half-axis-handle-size) + var(--area-marker-distance) * 1.4142 - 1px + var(--attribution-mask-size));
+    left: calc(-1 * var(--half-area-marker-size) + var(--area-marker-distance) * 1.4142 + var(--attribution-mask-size));
 }
 
 .area.partial.top.left:hover::after {
-    bottom: calc(-1 * var(--half-area-marker-size) - var(--half-axis-handle-size) + var(--area-marker-distance) + var(--attribution-mask-size));
-    right: calc(-1 * var(--half-area-marker-size) - var(--half-axis-handle-size) + var(--area-marker-distance) + var(--attribution-mask-size));
+    bottom: calc(-1 * var(--half-area-marker-size) - 1px + var(--area-marker-distance) + var(--attribution-mask-size));
+    right: calc(-1 * var(--half-area-marker-size) - 1px + var(--area-marker-distance) + var(--attribution-mask-size));
 }
 
 .area.partial.top.right:hover::after {
-    bottom: calc(-1 * var(--half-area-marker-size) - var(--half-axis-handle-size) + var(--area-marker-distance) + var(--attribution-mask-size));
-    left: calc(-1 * var(--half-area-marker-size) + var(--half-axis-handle-size) + var(--area-marker-distance) - 1px + var(--attribution-mask-size));
+    bottom: calc(-1 * var(--half-area-marker-size) - 1px + var(--area-marker-distance) + var(--attribution-mask-size));
+    left: calc(-1 * var(--half-area-marker-size) + var(--area-marker-distance) + var(--attribution-mask-size));
 }
 
 .area.partial.bottom.left:hover::after {
-    top: calc(-1 * var(--half-area-marker-size) + var(--half-axis-handle-size) + var(--area-marker-distance) - 1px + var(--attribution-mask-size));
-    right: calc(-1 * var(--half-area-marker-size) - var(--half-axis-handle-size) + var(--area-marker-distance) + var(--attribution-mask-size));
+    top: calc(-1 * var(--half-area-marker-size) + var(--area-marker-distance) + var(--attribution-mask-size));
+    right: calc(-1 * var(--half-area-marker-size) - 1px + var(--area-marker-distance) + var(--attribution-mask-size));
 }
 
 .area.partial.bottom.right:hover::after {
-    top: calc(-1 * var(--half-area-marker-size) + var(--half-axis-handle-size) + var(--area-marker-distance) - 1px + var(--attribution-mask-size));
-    left: calc(-1 * var(--half-area-marker-size) + var(--half-axis-handle-size) + var(--area-marker-distance) - 1px + var(--attribution-mask-size));
+    top: calc(-1 * var(--half-area-marker-size) + var(--area-marker-distance) + var(--attribution-mask-size));
+    left: calc(-1 * var(--half-area-marker-size) + var(--area-marker-distance) + var(--attribution-mask-size));
 }
 
 /* areaOverlay */
